# ecliptix-protected-protocol-rs

./: .gitignore  COMPARISON.md  Cargo.toml  LICENSE  Package.swift  README.md  SECURITY.md  build.rs
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmarks.yml  build-and-publish.yml  ci.yml  security-scan.yml
benches/: protocol_bench.rs
docs/: client-production-checklist.md  ecliptix-paper.tex  ffi-api.md  ffi-swift.md  protocol-release-checklist.md  relay-server.md  release-v1.0.1.md  security-proof.tex  server-production-checklist.md  swift-session-verification.md
docs/features/: disappearing-messages.md  message-franking.md  sealed-messages.md  shield-mode.md
formal/: Makefile  README.md
formal/proverif/: ecliptix.pv
formal/tamarin/: ecliptix.spthy  ecliptix_handshake.spthy  ecliptix_ratchet.spthy
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aes_gcm.rs  fuzz_commit_create.rs  fuzz_commit_processing.rs  fuzz_dh_validator.rs  fuzz_e2e_proto.rs  fuzz_envelope_decrypt.rs  fuzz_ffi.rs  fuzz_group_message_decrypt.rs  fuzz_handshake_ack.rs  fuzz_handshake_init.rs  fuzz_hkdf.rs  fuzz_identity.rs  fuzz_key_package_validate.rs  fuzz_key_schedule.rs  fuzz_kyber.rs  fuzz_master_key_derivation.rs  fuzz_membership.rs  fuzz_nonce.rs  fuzz_padding.rs  fuzz_protobuf_decode.rs  fuzz_relay.rs  fuzz_sealed_state_deserialize.rs  fuzz_secure_memory.rs  fuzz_sender_key.rs  fuzz_session_state.rs  fuzz_shamir.rs  fuzz_tree_deserialize.rs  fuzz_tree_kem.rs  fuzz_tree_operations.rs  fuzz_update_path.rs  fuzz_welcome_processing.rs  fuzz_welcome_roundtrip.rs
include/: epp_api.h  epp_client_api.h  epp_common_api.h  epp_export.h  module.modulemap
proto/e2e/: crypto_envelope.proto
proto/google/protobuf/: timestamp.proto
proto/protocol/: envelope.proto  error.proto  group.proto  handshake.proto  sealed_state.proto  state.proto
src/: lib.rs
src/api/: mod.rs  relay.rs
src/core/: constants.rs  errors.rs  mod.rs
src/crypto/: aes_gcm.rs  blake2b.rs  crypto_interop.rs  hkdf.rs  kyber_interop.rs  master_key_derivation.rs  mod.rs  padding.rs  secure_memory.rs  shamir_secret_sharing.rs
src/ffi/: api.rs  mod.rs
src/identity/: identity_keys.rs  mod.rs
src/interfaces/: mod.rs
src/models/: identity_key_bundle.rs  mod.rs
src/models/bundles/: local_public_key_bundle.rs  mod.rs
src/models/key_materials/: ed25519_key_pair.rs  mod.rs  signed_pre_key_pair.rs  x25519_key_pair.rs
src/models/keys/: chain_key.rs  message_key.rs  mod.rs  one_time_pre_key.rs  one_time_pre_key_public.rs
src/proto/: mod.rs
src/protocol/: handshake.rs  mod.rs  nonce.rs  session.rs
src/protocol/group/: commit.rs  key_package.rs  key_schedule.rs  membership.rs  mod.rs  sender_key.rs  tree.rs  tree_kem.rs  welcome.rs
src/security/: mod.rs
src/security/validation/: dh_validator.rs  mod.rs
swift/Sources/EcliptixProtectedProtocol/: EppCrypto.swift  EppError.swift  EppGroupSession.swift  EppHandshake.swift  EppIdentity.swift  EppSession.swift  Shim.swift
tests/: api_test.rs  attack_poc.rs  ffi_test.rs  integration_test.proptest-regressions  integration_test.rs
